Address various warnings in Restart Events tests (#8069)
Signed-off-by: Jakub Scholz <www@scholzj.com>